NFS-32: Review Maven2 pom.xml for Maven Release plugin
git-svn-id: https://source.sakaiproject.org/contrib/ufp/newsfeeds/trunk@52543 fdecad78-55fc-0310-b1b2-d7d25cf747c9